# DriveMate

./: .gitignore  README.md  pyproject.toml
data/labels/: awake.2224928a-4a8b-11f0-aa7f-de69df486a21.txt  awake.259de4bc-4a8b-11f0-b235-de69df486a21.txt  awake.2792600b-4a8b-11f0-ad79-de69df486a21.txt  awake.299f5aa7-4a8b-11f0-8175-de69df486a21.txt  awake.2bea9cad-4a8b-11f0-92c6-de69df486a21.txt  awake.2dfd66e8-4a8b-11f0-a0de-de69df486a21.txt  awake.303b4e04-4a8b-11f0-ad7a-de69df486a21.txt  awake.3275497a-4a8b-11f0-9e5a-de69df486a21.txt  awake.34a6bc70-4a8b-11f0-86a8-de69df486a21.txt  awake.36cfd6d0-4a8b-11f0-84bf-de69df486a21.txt  awake.38a841b2-4a8b-11f0-999f-de69df486a21.txt  awake.3abef4df-4a8b-11f0-b9c1-de69df486a21.txt  awake.3cc201ce-4a8b-11f0-a2af-de69df486a21.txt  awake.3eadf118-4a8b-11f0-ba1f-de69df486a21.txt  awake.41c01ac7-4a8b-11f0-a220-de69df486a21.txt  awake.43a84a01-4a8b-11f0-bc61-de69df486a21.txt  awake.45a2f19b-4a8b-11f0-99df-de69df486a21.txt  awake.47cd2c6c-4a8b-11f0-b055-de69df486a21.txt  awake.49bcc824-4a8b-11f0-8e23-de69df486a21.txt  awake.4c59b8ce-4a8b-11f0-9d75-de69df486a21.txt  drowsy.52ef9a89-4a8b-11f0-aaa4-de69df486a21.txt  drowsy.56e1064a-4a8b-11f0-8390-de69df486a21.txt  drowsy.591c5fe5-4a8b-11f0-91eb-de69df486a21.txt  drowsy.5b5db8d7-4a8b-11f0-8566-de69df486a21.txt  drowsy.5dc89ed4-4a8b-11f0-8b87-de69df486a21.txt  drowsy.6002b0f9-4a8b-11f0-9cde-de69df486a21.txt  drowsy.6268a0f1-4a8b-11f0-b9db-de69df486a21.txt  drowsy.651e0c41-4a8b-11f0-ab15-de69df486a21.txt  drowsy.679dc149-4a8b-11f0-b00b-de69df486a21.txt  (+11 more)
src/: main.py
